@@ -200,6 +200,13 @@
     </contributors>
 
      <dependencies>
+
+         <dependency>
+             <groupId>javax.annotation</groupId>
+             <artifactId>javax.annotation-api</artifactId>
+             <version>${javax.annotation-api.version}</version>
+         </dependency>
+
         <dependency>
             <groupId>org.opengis</groupId>
             <artifactId>geoapi-pending</artifactId>
@@ -284,9 +291,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules java.xml.bind,java.xml.ws.annotation,javafx.graphics</argLine>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
